added index, new, create and find routes for merchant

--- a/views/categorys/index.erb
+++ b/views/categorys/index.erb
@@ -3,7 +3,7 @@
 <a href="/categorys/<%= category.id %>"><%= category.type %></a><br><hr>
 <% end %>
 
-<a href="categorys/new"> Choose new category</a><br>
+<a href="categorys/new"> Create a new category?</a><br>
 
 
 
