--- a/views/categorys/new.erb
+++ b/views/categorys/new.erb
@@ -1,15 +1,16 @@
-<h2> Add a category</h2>
+<h2> Please Add A New Category</h2>
 
 <form action="/categorys" method="post">
 
-  <label for="category">Category:</label>
-  <input type="text" name="category"><br>
+  <label for="category">Category Type:</label>
+  <input type="text" name="type"><br> 
+  <!-- the name is type because that is what the instance variable is in the rb file! -->
 
-  <input type='submit' value ="Add new category">
+  <input type="submit" value ="Click to submit new category">
   </form>
 
   <br>
   <br>
-  <a href="/">Back</a>
+  <a href="/categorys">Back</a>
 
   
