--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,8 +1,5 @@
-<!-- <div>
+<div>
   <% @transactions.each do |transaction| %>
   Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name  %><br><hr>
   <% end %>
- <!--  the below line adds this to the rental page -->
-  <!-- <a href="/transactions/new">Rent A Book!</a><br>  --> 
-
-</div> -->
+ 
