--- a/views/transactions/new.erb
+++ b/views/transactions/new.erb
@@ -7,3 +7,23 @@
   <option value="<%= category.id %>"> <%= category.type %></option>
     <% end %>
 </select>
+
+<br>
+
+  
+  <label for ="merchant">Merchant Name:</label>
+  <select name ="merchant_id" id="merchant">
+  <% @merchants.each do |merchant| %>
+    <option value ="<%= merchant.id %>"> <%= merchant.name %></option>
+    <% end %>
+  </select>
+
+  <br>
+
+
+
+
+
+
+  <input type ="submit" value="Submit New Transaction">
+  </form>
