added home and return buttons on various pages

--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -2,4 +2,6 @@
   <% @transactions.each do |transaction| %>
   Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name  %><br><hr>
   <% end %>
+  <a href="/">Home</a>
+  </div>
  
