--- a/views/transactions/new.erb
+++ b/views/transactions/new.erb
@@ -25,4 +25,8 @@
 
 
   <input type ="submit" value="Submit New Transaction">
+
+  <a href="/transactions">return to transactions</a>
+
   </form>
+  
