added a find transaction by id method

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <div> 
-<h1> Welcome to the Bank Of Me</h1>
+<h1> Welcome to the Bank of Me</h1>
 
-<h4> Please choose and option from the list below:</h4>
+<h4> Please choose and option from the list below or apparently above, as I have no idea how CSS works!</h4>
 
 
 </div>
