added a link from the category type to the number of items

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,14 @@
 <body>
   <nav>
       <ul>
-        <li><a href="/transactions/new">Enter New Transactions</a></li>
+
         <li><a href="/transactions">Transaction History </a></li>
+        <li><a href="/transactions/new">Enter New Transactions</a></li>
+        <li><a href ="/categorys">
+        Categories List</a></li>
+        <li><a href ="/merchants"> Merchants List </a></li>
+        
+
       </ul>
   </nav>
   <main>
