--- a/views/categorys/show.erb
+++ b/views/categorys/show.erb
@@ -1,4 +1,21 @@
 <div>
-  <h1><%= @category.type %></h1>
+  <h2> You are now viewing your selected bill </h2>
   
+    
+    
+
+  <!-- clicking on the category will take you to the page with the categories information  -->
+
+
+  <!-- Want to show all the the transactions of the category clicked -->
+    <h3> Transactions Below:</h3>
+
+
+    <% @category.transactions.each do |transaction| %>
+      <a href="/transactions/<%= transaction.id%>">Click for more details</a>
+      <%= transaction.cost %> 
+    <% end  %> 
+
+
+
 </div>
