--- a/views/transactions/new.erb
+++ b/views/transactions/new.erb
@@ -21,8 +21,8 @@
   <br>
 
   <label for="transaction">Total Amount:</label>
-  <input type="text" name="transaction"><br>
-
+  <input type="text" name="cost"><br>
+  <!-- that stupid bloody 'cost' was named something else and that threw the whole thing into chaos!!!!!!!!! -->
 
   <input type ="submit" value="Submit New Transaction">
 
