--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,9 +1,11 @@
 <div>
   <% @transactions.each do |transaction| %>
-  Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name %> - Total Bill: <%= transaction.cost %> <br><hr>
+  Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name %> - Bill: <%= transaction.cost %> <br><hr>
   <% end %>
 
-  <!-- need to insert an overall cost here -->
+  <!-- need to insert an overall cost method here -->
+  Total Amount Spent: <%= @total %>
+  
   <a href="/">Home</a>
   </div>
  
