mvp finally finished

--- a/views/categorys/show.erb
+++ b/views/categorys/show.erb
@@ -13,5 +13,9 @@
   
 <!-- need to insert a total cost here for only each item by its id  -->
 
-<h4>Total Cost: <%= @total %></h4>
+<h4>Total Cost For Category: </h4>
+
+<%=@category.specific_total%>
+
+
 </div>
