got total total cost to 2 decimal points instead of rounding to the nearest whole number

--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -4,7 +4,8 @@
   <% end %>
 
   <!-- need to insert an overall cost method here -->
-  Total Amount Spent: <%= @total %>
+  <!-- we can use the @total as it has the .total_cost method -->
+  Total Amount Spent: <%= @total.to_f %>
   
   <a href="/">Home</a>
   </div>
