update and edit method added for category class: git add .! 111 git add .! git add .! git add . git add .! git add .! qt qquit quit exit p q

--- a/views/categorys/show.erb
+++ b/views/categorys/show.erb
@@ -21,6 +21,6 @@
 <%=@category.specific_total%>
 
 
-<a href="/categorys/<%= @category.id %>/edit">Edit Transaction</a>
+<a href="/categorys/<%= @category.id %>/edit">Edit Category</a>
 
 </div>
