added update and edit functions for the transaction class

--- a/views/categories/edit.erb
+++ b/views/categories/edit.erb
@@ -1,6 +1,6 @@
 <h2> Edit A Category</h2>
 
-<form action="/categorys/<%=@category.id %>" method="post">
+<form action="/categories/<%=@category.id %>" method="post">
 
   <label for="category">Category Type:</label>
   <input type="text" name="type" value="<%=@category.type %>">
@@ -13,4 +13,4 @@
 
   <br>
   <br>
-  <a href="/categorys">Back</a>
+  <a href="/categories">Back</a>
