--- a/views/categories/new.erb
+++ b/views/categories/new.erb
@@ -1,6 +1,6 @@
 <h2> Please Add A New Category</h2>
 
-<form action="/categorys" method="post">
+<form action="/categories" method="post">
 
   <label for="category">Category Type:</label>
   <input type="text" name="type"><br> 
@@ -11,6 +11,6 @@
 
   <br>
   <br>
-  <a href="/categorys">Back</a>
+  <a href="/categories">Back</a>
 
   
