--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <div> 
 <h2> Welcome to the Bank of Me</h2>
+<h3> Insolvency free since '93'! <h3>
 
-<h5> Please choose and option from the list below, or apparently from above!</h5>
 
-
+<img src=https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT4zbDL1ph3FcgxQrQDL9KAry-SrputxWBCW_Q8yRgQOSPHIUf1>
 </div>
