--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,11 +8,11 @@
   <nav>
       <ul>
 
-        <li><a href="/transactions">Transaction History </a></li>
-        <li><a href="/transactions/new">Enter New Transactions</a></li>
-        <li><a href ="/categorys">
+        <li><a href="/transactions/new">Enter New Transaction</a></li>
+        <li><a href ="/categories">
         Categories List</a></li>
         <li><a href ="/merchants"> Merchants List </a></li>
+        <li><a href="/transactions">Transaction History </a></li>
         
 
       </ul>
