--- a/views/merchants/show.erb
+++ b/views/merchants/show.erb
@@ -2,4 +2,6 @@
   <h1><%= @merchant.name %></h1>
   
   <a href="/merchants/<%= @merchant.id %>/edit">Edit Merchant Name</a>
+  <br>
+  <a href="/merchants">Back</a>
 </div>
