--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,12 +1,12 @@
 <div>
   <% @transactions.each do |transaction| %>
-  Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name %> - Bill: <%= transaction.cost %> <br><hr>
+  Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name %> - Bill: <%= '%.2f' % (transaction.cost) %> <br><hr>
   <% end %>
 
   <!-- need to insert an overall cost method here -->
   <!-- we can use the @total as it has the .total_cost method -->
-  Total Amount Spent: <%= @total.to_f %>
-  
+  Total Amount Spent: <%= '%.2f' % (@total.to_f) %>
+  <br>
   <a href="/">Home</a>
   </div>
  
