added delete functions to merchants and categories

--- a/views/merchants/show.erb
+++ b/views/merchants/show.erb
@@ -3,5 +3,10 @@
   
   <a href="/merchants/<%= @merchant.id %>/edit">Edit Merchant Name</a>
   <br>
+  <form action="/merchants/<%= @merchant.id %>" method="post">
+    <input type="submit" value="Click To Delete">
+    <input name="_method" type="hidden" value="delete"/>
+  </form>
+  <br>
   <a href="/merchants">Back</a>
 </div>
