fully working delete button for transactions class

--- a/views/transactions/show.erb
+++ b/views/transactions/show.erb
@@ -7,6 +7,11 @@
   <br>
   <a href="/transactions/<%= @transaction.id %>/edit">Edit</a>
   <br>
+  <form action="/transactions/<%= @transaction.id %>" method="post">
+    <input type="submit" value="Click To Delete">
+    <input name="_method" type="hidden" value="delete"/>
+  </form>
+  <br>
   <a href="/">Home</a>
 
   
