--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,12 +9,10 @@
       <ul>
 
         <li><a href="/transactions/new">Enter New Transaction</a></li>
-        <li><a href ="/categories">
-        Categories List</a></li>
+        <li><a href ="/categories">Categories List</a></li>
         <li><a href ="/merchants"> Merchants List </a></li>
         <li><a href="/transactions">Transaction History </a></li>
         
-
       </ul>
   </nav>
   <main>
