--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ footer {
 }
 
 nav {
-  background-color: lightgrey;
+  background-color: lightblue;
   height: 65px;
   position: fixed;
   width: 100%;
@@ -42,7 +42,7 @@ nav ul li{
 
 nav ul li a{
   text-decoration: none;
-  color: blue;
+  color: lightslategrey;
   line-height: 65px;
   margin-left: 20px;
   font-size: 20px;
