--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,12 +1,15 @@
 <div>
   <% @transactions.each do |transaction| %>
-  Category: <%= transaction.category.type  %> - Merchant: <%= transaction.merchant.name %> - Bill: <%= '%.2f' % (transaction.cost) %> <br><hr>
+  <em> <b>Category: </b> </em> <%= transaction.category.type  %> <em> <b>Merchant:</b></em> <%= transaction.merchant.name %> <em> <b>Bill: </b></em> <%= '%.2f' % (transaction.cost)  %><br><hr>
   <% end %>
 
   <!-- need to insert an overall cost method here -->
   <!-- we can use the @total as it has the .total_cost method -->
-  Total Amount Spent: <%= '%.2f' % (@total.to_f) %>
+  
+  <em>Total Amount Spent:<b> <%= '%.2f' % (@total.to_f) %>
   <br>
+  
+</b></em>
   <a href="/">Home</a>
   </div>
  
