--- a/views/transactions/show.erb
+++ b/views/transactions/show.erb
@@ -1,4 +1,5 @@
 
+  <div>
   <h1><%= @transaction.merchant.name %></h1>
   <h2><%= @transaction.category.type %></h2>
   <h3><%= @transaction.cost %> </h3>
@@ -9,10 +10,11 @@
   <br>
   <form action="/transactions/<%= @transaction.id %>" method="post">
     <input type="submit" value="Click To Delete">
-    <input name="_method" type="hidden" value="delete"/>
+    <input name="_method" type="hidden" value="delete"/>  
   </form>
   <br>
   <a href="/">Home</a>
+</div>
 
   
 
